# random_base

./: CMakeLists.txt  README.md
src/: FakeRandom.cpp  FakeRandom.h  RandomBase.h  StdRandom.cpp  StdRandom.h  benchmark.cpp
